--- a/config/config.org
+++ b/config/config.org
@@ -484,11 +484,16 @@ But I'm using flakes anyway (=use_flake=), so this doesn't really matter.
 **** GPG-agent
 GPG agent manages my gpg keys. I enable ssh support so that it can work as an ssh authentication key too.
 Default cache ttl is the time (in seconds) before it asks for the password again.
+Add in the pinentry options to allow emacs to enter the pin through the minibuffer.
 #+begin_src nix
   services.gpg-agent = {
     enable = true;
     defaultCacheTtl = 7200;
     enableSshSupport = true;
+    extraConfig = ''
+    allow-emacs-pinentry
+    allow-loopback-pinentry
+    ''
   };
 #+end_src
 
