--- a/config/config.org
+++ b/config/config.org
@@ -552,6 +552,15 @@ Then I set the keybindings, which are just an attribute set of string to string.
             xkb_options = "ctrl:nocaps";
           };
           "2131:256:Topre_Corporation_HHKB_Professional" = { xkb_layout = "us"; };
+          "2:7:SynPS/2_Synaptics_TouchPad" = {
+            tap = "enabled";
+            tap_button_map = "lrm";
+            natural_scroll = "disabled";
+          };
+          "2:10:TPPS/2_Elan_TrackPoint" = {
+            accel_profile = "flat";
+            pointer_accel = 1;
+          };
         };
       };
 
