--- a/config/config.org
+++ b/config/config.org
@@ -217,6 +217,7 @@ I use latex for writing things and making plots look nice, so it's useful to hav
       git
       gnome3.gnome-tweaks
       gnumake
+      gnupg
       libtool
       libvterm
       mpv
@@ -499,7 +500,7 @@ Add in the pinentry options to allow emacs to enter the pin through the minibuff
     enable = true;
     defaultCacheTtl = 7200;
     enableSshSupport = true;
-    pinentryFlavor = "emacs";
+    pinentryFlavor = "gnome3";
     extraConfig = ''
     allow-emacs-pinentry
     allow-loopback-pinentry
@@ -512,7 +513,7 @@ Add in the pinentry options to allow emacs to enter the pin through the minibuff
 Just some extra packages n stuff that are pretty self explanatory. Alacritty is a fast terminal written in rust.
 Feh is a simple image viewer.
 #+begin_src nix
-  home.packages = with pkgs; [ htop teams ];
+  home.packages = with pkgs; [ htop teams pinentry.gnome3 ];
   programs.alacritty.enable = true;
   programs.feh.enable = true;
 #+end_src
