--- a/config/config.org
+++ b/config/config.org
@@ -500,7 +500,7 @@ Add in the pinentry options to allow emacs to enter the pin through the minibuff
     enable = true;
     defaultCacheTtl = 7200;
     enableSshSupport = true;
-    pinentryFlavor = "emacs";
+    pinentryFlavor = "gtk2";
     extraConfig = ''
     allow-emacs-pinentry
     allow-loopback-pinentry
@@ -513,7 +513,7 @@ Add in the pinentry options to allow emacs to enter the pin through the minibuff
 Just some extra packages n stuff that are pretty self explanatory. Alacritty is a fast terminal written in rust.
 Feh is a simple image viewer.
 #+begin_src nix
-  home.packages = with pkgs; [ htop teams pinentry.emacs ];
+  home.packages = with pkgs; [ htop teams pinentry-gtk2 ];
   programs.alacritty.enable = true;
   programs.feh.enable = true;
 #+end_src
