--- a/config/config.org
+++ b/config/config.org
@@ -495,6 +495,8 @@ But I'm using flakes anyway (=use_flake=), so this doesn't really matter.
 GPG agent manages my gpg keys. I enable ssh support so that it can work as an ssh authentication key too.
 Default cache ttl is the time (in seconds) before it asks for the password again.
 Add in the pinentry options to allow emacs to enter the pin through the minibuffer.
+I use the gtk2 pinentry, because other things seem to not work.
+If I use vterm in emacs, then try to do pinentry it tries to run the curses pinentry and gets wobbled.
 #+begin_src nix
   services.gpg-agent = {
     enable = true;
