Turn off lsp-ui-doc and set lsp keymap

--- a/config/config.org
+++ b/config/config.org
@@ -897,7 +897,9 @@ At the moment - disable it.
   (use-package lsp-mode
     :init
     ;; set prefix for lsp-command-keymap (few alternatives - "C-l", "C-c l")
-    (setq lsp-keymap-prefix "C-c l")
+    (setq lsp-keymap-prefix "C-;")
+    :config
+    (define-key lsp-mode-map (kbd "C-;") lsp-command-map)
     :hook (;; replace XXX-mode with concrete major-mode(e. g. python-mode)
            ;; (XXX-mode . lsp)
            (elixir-mode . lsp-deferred)
@@ -909,6 +911,8 @@ At the moment - disable it.
            (lsp-mode . lsp-enable-which-key-integration))
     :commands lsp lsp-deferred)
   (use-package lsp-ui
+    :init
+    (setq lsp-ui-doc-enable nil)
     :bind (:map lsp-ui-mode-map
                 ("C-c i" . lsp-ui-imenu)))
 #+end_src
