Add F7 key to python mode

--- a/config/config.org
+++ b/config/config.org
@@ -1008,7 +1008,13 @@ A better pdf viewer than doc-view. Useful with tex.
                 ("<f6>" .
                  (lambda ()
                    (interactive)
-                   (projectile-run-async-shell-command-in-root "python -m pytest")))))
+                   (projectile-run-async-shell-command-in-root "python -m pytest")))
+                ("<f7>" .
+                 (lambda ()
+                   (interactive)
+                   (projectile-run-async-shell-command-in-root "python %s"
+                                                               (file-relative-name buffer-file-name
+                                                                                   projectile-project-root))))))
 #+end_src
 
 Use blacken for python formatting
